--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-react-views": "^0.11.0",
-    "react": "^18.2.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^8.3.4",
+    "react": "^18.3.1"
   }
 }
