--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "express": "^4.19.2",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
-    "mongoose": "^8.3.4",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.3.4"
+  },
+  "devDependencies": {
     "react": "^18.3.1"
   }
 }
