--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "react": "^18.3.1"
